tests/NormalTests/paczka1/small_fuzzy/68850019.err
Error in line 4: eQzOPgtOt S395 77,8
Error in line 7: m6Dg A11 43,5
